--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:id="@+id/settings_activity"
-             tools:context="com.example.moodly.app.Settings">
+             tools:context="com.leanovate.moodly.app.Settings">
 
     <TableRow android:layout_width="match_parent"
               android:layout_height="match_parent"
