--- a/app/src/main/res/menu/menu_display_vote_stats.xml
+++ b/app/src/main/res/menu/menu_display_vote_stats.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.claus.moddly.DisplayVoteStatsActivity">
+    tools:context="com.leanovate.claus.moddly.DisplayVoteStatsActivity">
 
 </menu>
